Server/esp_server/build/log/idf_py_stderr_output_49274
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'tcp_server_task':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:182:34: error: invalid operands to binary + (have 'char *' and 'char *')
  182 |     const char *filename = ("%s" + "/write_file.txt", &MOUNT_POINT);
      |                             ~~~~ ^
      |                             |    |
      |                             |    char *
      |                             char *
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:182:53: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
  182 |     const char *filename = ("%s" + "/write_file.txt", &MOUNT_POINT);
      |                                                     ^
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:182:28: error: initialization of 'const char *' from incompatible pointer type 'char (*)[8]' [-Wincompatible-pointer-types]
  182 |     const char *filename = ("%s" + "/write_file.txt", &MOUNT_POINT);
      |                            ^
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: At top level:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:156:14: warning: 'open_file' defined but not used [-Wunused-function]
  156 | static FILE *open_file(const char *filename) {
      |              ^~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:101:13: warning: 'wifi_init_softap' defined but not used [-Wunused-function]
  101 | static void wifi_init_softap() {
      |             ^~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
